pod_defination.yml
apiVersion: v1

kind: Pod

metadata:
  name: myapppod
  labels:
    app: myapp

spec:
  containers:
    - name: nginx-container
      image: nginx
