service_defination_nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports:
    - targetPort: 80 # Optional (default = port)
      port: 80 # Required
      nodePort: 30008 # Optional (Any free port between 30000-32767 is allocated)
  selector:
    app: myapp # Provide the label of the POD to associate the service to that pod.
