Network_Policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db #<this label must be assigned to the POD>
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
           matchLabels:
             name: api-pod #<name of the pod from which the traffic is coming>
    ports:
      - protocol: TCP
        port: 3306
